feat: Implement core app logic with dynamic effects, add new visual effects, and update PWA styling and assets. v6.3.1

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Pixel Dashboard",
-    "short_name": "PixelDash",
+    "name": "Pixel Dashboard - Bksp",
+    "short_name": "Pixel Dashboard",
     "start_url": "./pixels.html",
     "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#000000",
+    "background_color": "#0d0e10",
+    "theme_color": "#0d0e10",
     "orientation": "any",
     "icons": [
         {
